menu bar and buy now button shifted little upwards and mobile issue fix

--- a/css/style2.css
+++ b/css/style2.css
@@ -282,12 +282,13 @@ ul li a{
             height: 250px;
             width: 300px;
             left: 50%;
-            transform: translate(-50%,40%);  
+            margin-top: 20%;
+            transform: translate(-50%);  
         }
     
         .button{
             position:absolute;
-            top: 7%;
+            top: 4%;
             left: 50%;
             transform: translate(-50%);
         } 
@@ -314,8 +315,8 @@ ul li a{
           
           .dropdown {
             position:absolute;
-            top: 5%;
-            left: 5%;
+            top: 3%;
+            left: 3%;
             z-index:1;
           }
           
@@ -350,15 +351,15 @@ ul li a{
     
     
           .menu-bar{
-            width: 35px;
-            height: 5px;
+            width: 30px;
+            height: 4px;
             background-color: black;
             margin: 6px 0;
           }
           #txt1{
             display: block;
             width: 90%;
-            margin-top: 10px;
+            margin-top: 30px;
             background-color: pink;
             color: grey;
             padding: 10px 10px 10px 10px;
@@ -370,10 +371,11 @@ ul li a{
         }
         
         #txt2{
+            display: block;
             width: 90%;
             background-color: pink;
             color: grey;
-            margin-top: 10px;
+            margin-top: 30px;
             transform: translate(5%);
             padding: 10px 10px 10px 10px;
             text-align: center;
