--- a/css/styles.css
+++ b/css/styles.css
@@ -263,8 +263,8 @@ ul li a{
       
       .dropdown {
         position:absolute;
-        top: 5%;
-        left: 5%;
+        top: 3%;
+        left: 3%;
         z-index:1;
       }
       
@@ -299,8 +299,8 @@ ul li a{
 
 
       .menu-bar{
-        width: 35px;
-        height: 5px;
+        width: 30px;
+        height: 4px;
         background-color: black;
         margin: 6px 0;
       }
